# HIPAccBenchmark

./: README.md
TestData/: Lenna.raw
cmake/: CMakeLists.txt  generate-vs2013.bat
cmake/Benchmark/: Benchmark.vcxproj.user_x64  Benchmark.vcxproj.user_x86  CMakeLists.txt
cmake/BubbleSortMedian/: CMakeLists.txt
cmake/BubbleSortMedianOptimized/: CMakeLists.txt
cmake/Convolution/: CMakeLists.txt
cmake/ImageAdd/: CMakeLists.txt
cmake/Mandelbrot/: CMakeLists.txt
cmake/MemoryThroughput/: CMakeLists.txt
cmake/MinMaxDetector/: CMakeLists.txt
cmake/NormalizedGradient/: CMakeLists.txt
cmake/TopologicalErosion/: CMakeLists.txt
cmake/_macros/: HIPAccMacros.cmake  ISPCMacros.cmake
include/Benchmark/: CommonDefines.h  Image.h  ImageIO.h
include/BubbleSortMedian/: BubbleSortMedian.h
include/BubbleSortMedianOptimized/: BubbleSortMedianOptimized.h
include/Convolution/: Convolution.h
include/ImageAdd/: ImageAdd.h
include/Mandelbrot/: Mandelbrot.h
include/MemoryThroughput/: MemoryThroughput.h
include/MinMaxDetector/: MinMaxDetector.h
include/NormalizedGradient/: NormalizedGradient.h
include/TopologicalErosion/: TopologicalErosion.h
src/Benchmark/: Benchmark.cpp  ImageIO.cpp
src/BubbleSortMedian/: BubbleSortMedian.cpp  BubbleSortMedianDefines.h  BubbleSortMedianHandlerDefines.h  stdafx.cpp
src/BubbleSortMedian/BubbleSortMedianFloat/: BubbleSortMedianFloat.cpp  BubbleSortMedianFloatHandlers.h  BubbleSortMedianFloatHandlersAVX.cpp  BubbleSortMedianFloatHandlersSSE.cpp  BubbleSortMedianFloatHandlersScalar.cpp
src/BubbleSortMedian/BubbleSortMedianUInt8/: BubbleSortMedianUInt8.cpp  BubbleSortMedianUInt8Handlers.h  BubbleSortMedianUInt8HandlersAVX.cpp  BubbleSortMedianUInt8HandlersSSE.cpp  BubbleSortMedianUInt8HandlersScalar.cpp
src/BubbleSortMedian/HIPAccSources/: BubbleSortGeneric.hxx
src/BubbleSortMedianOptimized/: BubbleSortMedianOptimized.cpp  BubbleSortMedianOptimizedDefines.h  BubbleSortMedianOptimizedHandlerDefines.h  stdafx.cpp
src/BubbleSortMedianOptimized/BubbleSortMedianOptimizedFloat/: BubbleSortMedianOptimizedFloat.cpp  BubbleSortMedianOptimizedFloatHandlers.h  BubbleSortMedianOptimizedFloatHandlersAVX.cpp  BubbleSortMedianOptimizedFloatHandlersSSE.cpp  BubbleSortMedianOptimizedFloatHandlersScalar.cpp
src/BubbleSortMedianOptimized/BubbleSortMedianOptimizedUInt8/: BubbleSortMedianOptimizedUInt8.cpp  BubbleSortMedianOptimizedUInt8Handlers.h  BubbleSortMedianOptimizedUInt8HandlersAVX.cpp  BubbleSortMedianOptimizedUInt8HandlersSSE.cpp  BubbleSortMedianOptimizedUInt8HandlersScalar.cpp
src/BubbleSortMedianOptimized/HIPAccSources/: BubbleSortOptGeneric.hxx
src/Convolution/: Convolution.cpp  ConvolutionDefines.h  ConvolutionHandlerDefines.h  stdafx.cpp
src/Convolution/ConvolutionFloat/: ConvolutionFloat.cpp  ConvolutionFloatHandlers.h  ConvolutionFloatHandlersAVX.cpp  ConvolutionFloatHandlersSSE.cpp  ConvolutionFloatHandlersScalar.cpp
src/Convolution/ConvolutionUInt8/: ConvolutionUInt8.cpp  ConvolutionUInt8Handlers.h  ConvolutionUInt8HandlersAVX.cpp  ConvolutionUInt8HandlersSSE.cpp  ConvolutionUInt8HandlersScalar.cpp
src/Convolution/HIPAccSources/: ConvGeneric.hxx
src/ImageAdd/: ImageAdd.cpp  ImageAddDefines.h  ImageAddFloat.cpp  ImageAddFloatHandlers.h  ImageAddHandlerDefines.h  stdafx.cpp
src/ImageAdd/HIPAccSources/: AddFloatAVX.cpp  AddFloatArray.cpp  AddFloatDefines.h  AddFloatSSE.cpp  AddFloatSSE2.cpp  AddFloatSSE3.cpp  AddFloatSSE4_1.cpp  AddFloatSSE4_2.cpp  AddFloatSSSE3.cpp  AddFloatScalar.cpp  AddGeneric.hxx  CommonDefines.h
src/ImageAdd/ImageAddFloat/: ImageAddFloat.cpp  ImageAddFloatHandlers.h  ImageAddFloatHandlersAVX.cpp  ImageAddFloatHandlersSSE.cpp  ImageAddFloatHandlersScalar.cpp
src/ImageAdd/ImageAddInt/: ImageAddInt.cpp  ImageAddIntHandlers.h  ImageAddIntHandlersAVX.cpp  ImageAddIntHandlersSSE.cpp  ImageAddIntHandlersScalar.cpp
src/ImageAdd/ImageAddUInt8/: ImageAddUInt8.cpp  ImageAddUInt8Handlers.h  ImageAddUInt8HandlersAVX.cpp  ImageAddUInt8HandlersSSE.cpp  ImageAddUInt8HandlersScalar.cpp
src/Mandelbrot/: Mandelbrot.cpp  MandelbrotDefines.h  MandelbrotHandlerDefines.h
src/Mandelbrot/HIPAccSources/: MandelbrotGeneric.hxx
src/Mandelbrot/ISPCSources/: MandelbrotGeneric.hxx
src/Mandelbrot/MandelbrotFloat/: MandelbrotFloat.cpp  MandelbrotFloatHandlers.h  MandelbrotFloatHandlersAVX.cpp  MandelbrotFloatHandlersSSE.cpp  MandelbrotFloatHandlersScalar.cpp
src/Mandelbrot/MandelbrotUInt8/: MandelbrotUInt8.cpp  MandelbrotUInt8Handlers.h  MandelbrotUInt8HandlersAVX.cpp  MandelbrotUInt8HandlersSSE.cpp  (+1 more)
src/MemoryThroughput/: AVX_Routines.cpp  MemoryThroughput.cpp  SSE_Routines.cpp  TestRead.cpp  TestRead.h  TestWrite.cpp  TestWrite.h  stdafx.cpp
src/MinMaxDetector/: MinMaxDetector.cpp  MinMaxDetectorDefines.h  MinMaxDetectorHandlerDefines.h  stdafx.cpp
src/NormalizedGradient/: NormalizedGradient.cpp  NormalizedGradientDefines.h  NormalizedGradientHandlerDefines.h  stdafx.cpp
src/TopologicalErosion/: TopologicalErosion.cpp  TopologicalErosionDefines.h  TopologicalErosionHandlerDefines.h  stdafx.cpp  stdafx.h
vs2013/: HIPAccBenchmark.opensdf  HIPAccBenchmark.sln
vs2013/Benchmark/: Benchmark.vcxproj  Benchmark.vcxproj.filters  ReadMe.txt
vs2013/BubbleSortMedian/: BubbleSortMedian.vcxproj  BubbleSortMedian.vcxproj.filters  ReadMe.txt
vs2013/BubbleSortMedianOptimized/: BubbleSortMedianOptimized.vcxproj  BubbleSortMedianOptimized.vcxproj.filters  ReadMe.txt
vs2013/Convolution/: Convolution.vcxproj  Convolution.vcxproj.filters  ReadMe.txt
vs2013/ImageAdd/: ImageAdd.vcxproj  ImageAdd.vcxproj.filters  ReadMe.txt
vs2013/MemoryThroughput/: MemoryThroughput.vcxproj  MemoryThroughput.vcxproj.filters  ReadMe.txt
vs2013/MinMaxDetector/: MinMaxDetector.vcxproj  MinMaxDetector.vcxproj.filters  ReadMe.txt
vs2013/NormalizedGradient/: NormalizedGradient.vcxproj  NormalizedGradient.vcxproj.filters  ReadMe.txt
vs2013/TopologicalErosion/: ReadMe.txt  TopologicalErosion.vcxproj  TopologicalErosion.vcxproj.filters
vs2013/_HIPAcc_Target/: HIPAcc.props  HIPAcc.targets  HIPAcc.xml
(+182 files in other folders)
