CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# provide only Debug and Release configurations
SET(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "build config types" FORCE)
SET(CMAKE_BUILD_TYPE Release CACHE STRING "build type: Debug or Release" FORCE)


PROJECT(HIPAccBenchmark)

IF(MSVC)
    SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
ENDIF(MSVC)

ADD_SUBDIRECTORY(BubbleSortMedian)
ADD_SUBDIRECTORY(BubbleSortMedianOptimized)
ADD_SUBDIRECTORY(Convolution)
ADD_SUBDIRECTORY(ImageAdd)
ADD_SUBDIRECTORY(MemoryThroughput)
ADD_SUBDIRECTORY(MinMaxDetector)
ADD_SUBDIRECTORY(NormalizedGradient)
ADD_SUBDIRECTORY(TopologicalErosion)

ADD_SUBDIRECTORY(Benchmark)

IF(MSVC)
    SET(TEST_LIBRARY_FOLDER "Libraries")

    SET_PROPERTY(TARGET BubbleSortMedian           PROPERTY FOLDER ${TEST_LIBRARY_FOLDER})
    SET_PROPERTY(TARGET BubbleSortMedianOptimized  PROPERTY FOLDER ${TEST_LIBRARY_FOLDER})
    SET_PROPERTY(TARGET Convolution                PROPERTY FOLDER ${TEST_LIBRARY_FOLDER})
    SET_PROPERTY(TARGET ImageAdd                   PROPERTY FOLDER ${TEST_LIBRARY_FOLDER})
    SET_PROPERTY(TARGET MemoryThroughput           PROPERTY FOLDER ${TEST_LIBRARY_FOLDER})
    SET_PROPERTY(TARGET MinMaxDetector             PROPERTY FOLDER ${TEST_LIBRARY_FOLDER})
    SET_PROPERTY(TARGET NormalizedGradient         PROPERTY FOLDER ${TEST_LIBRARY_FOLDER})
    SET_PROPERTY(TARGET TopologicalErosion         PROPERTY FOLDER ${TEST_LIBRARY_FOLDER})
ENDIF(MSVC)


