SET(PROJECT_NAME "Benchmark")

SET(PROJECT_HEADER_DIR "../../include/${PROJECT_NAME}/")
SET(PROJECT_SOURCE_DIR "../../src/${PROJECT_NAME}/")

SET(PROJECT_SOURCES "${PROJECT_SOURCE_DIR}/Benchmark.cpp")
SET(PROJECT_HEADERS "")


ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SOURCES} ${PROJECT_HEADERS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} BubbleSortMedian)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} BubbleSortMedianOptimized)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} Convolution)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ImageAdd)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} MemoryThroughput)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} MinMaxDetector)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} NormalizedGradient)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} TopologicalErosion)


SOURCE_GROUP("Header Files" FILES ${PROJECT_HEADERS})
SOURCE_GROUP("Source Files" FILES ${PROJECT_SOURCES})
