SET(PROJECT_NAME "Benchmark")

SET(PROJECT_HEADER_DIR "../../include/${PROJECT_NAME}/")
SET(PROJECT_SOURCE_DIR "../../src/${PROJECT_NAME}/")


# Add source files
SET(PROJECT_SOURCES "${PROJECT_SOURCE_DIR}/Benchmark.cpp"
                    "${PROJECT_SOURCE_DIR}/ImageIO.cpp")


# Add header files
SET(PROJECT_HEADERS_PUBLIC "${PROJECT_HEADER_DIR}/CommonDefines.h"
                           "${PROJECT_HEADER_DIR}/Image.h"
                           "${PROJECT_HEADER_DIR}/ImageIO.h")

SET(PROJECT_HEADERS "${PROJECT_HEADERS_PUBLIC}")


ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SOURCES} ${PROJECT_HEADERS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} BubbleSortMedian)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} BubbleSortMedianOptimized)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} Convolution)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ImageAdd)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} MemoryThroughput)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} MinMaxDetector)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} NormalizedGradient)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} TopologicalErosion)


SOURCE_GROUP(${SOURCE_GROUP_PUBLIC_HEADER_FILES} FILES ${PROJECT_HEADERS_PUBLIC})
SOURCE_GROUP(${SOURCE_GROUP_SOURCE_FILES}        FILES ${PROJECT_SOURCES})

# Copy user files to the project directory if the Visual Studio code generator is selected
IF(MSVC)
    SET(PROJECT_USER_FILE "${PROJECT_NAME}.vcxproj.user")

    IF(CMAKE_CL_64)
        SET(PROJECT_USER_FILE_CURRENT "${PROJECT_USER_FILE}_x64")
    ELSE(CMAKE_CL_64)
        SET(PROJECT_USER_FILE_CURRENT "${PROJECT_USER_FILE}_x86")
    ENDIF(CMAKE_CL_64)

    FILE(COPY "${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_USER_FILE_CURRENT}" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
    FILE(RENAME "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_USER_FILE_CURRENT}" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_USER_FILE}")
ENDIF(MSVC)

# Add the post-build event which copies the test data to the correct location
IF(MSVC)
    ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} POST_BUILD COMMAND xcopy ARGS \"${CMAKE_SOURCE_DIR}/../TestData/*\" \"$(TargetDir)\" /F /Y)
ENDIF(MSVC)