SET(PROJECT_NAME "BubbleSortMedian")

SET(PROJECT_HEADER_DIR "../../include/${PROJECT_NAME}/")
SET(PROJECT_SOURCE_DIR "../../src/${PROJECT_NAME}/")

SET(PROJECT_SOURCES "${PROJECT_SOURCE_DIR}/BubbleSortMedian.cpp")
SET(PROJECT_HEADERS "")


ADD_LIBRARY(${PROJECT_NAME} ${PROJECT_SOURCES} ${PROJECT_HEADERS})

SOURCE_GROUP("Header Files" FILES ${PROJECT_HEADERS})
SOURCE_GROUP("Source Files" FILES ${PROJECT_SOURCES})
