SET(PROJECT_NAME "BubbleSortMedian")
SET(HIPACC_NAME  "BubbleSort")

SET(PROJECT_HEADER_DIR "../../include/${PROJECT_NAME}/")
SET(PROJECT_SOURCE_DIR "../../src/${PROJECT_NAME}/")

SET(HIPACC_NAME_FLOAT  "${HIPACC_NAME}${SUFFIX_TYPE_FLOAT}")
SET(HIPACC_NAME_UINT8  "${HIPACC_NAME}${SUFFIX_TYPE_UINT8}")

SET(SOURCES_FLOAT           "${PROJECT_NAME}${SUFFIX_TYPE_FLOAT}")
SET(SOURCES_FLOAT_BASE_PATH "${PROJECT_SOURCE_DIR}/${SOURCES_FLOAT}/${SOURCES_FLOAT}")

SET(SOURCES_UINT8           "${PROJECT_NAME}${SUFFIX_TYPE_UINT8}")
SET(SOURCES_UINT8_BASE_PATH "${PROJECT_SOURCE_DIR}/${SOURCES_UINT8}/${SOURCES_UINT8}")


# Add HIPAcc files
SET(HIPACC_KERNELS_BASE_PATH       "${CMAKE_CURRENT_BINARY_DIR}")
SET(HIPACC_KERNELS_BASE_PATH_FLOAT "${HIPACC_KERNELS_BASE_PATH}/cc${HIPACC_NAME_FLOAT}_")
SET(HIPACC_KERNELS_BASE_PATH_UINT8 "${HIPACC_KERNELS_BASE_PATH}/cc${HIPACC_NAME_UINT8}_")

SET(HIPACC_KERNELS_FLOAT "${HIPACC_KERNELS_BASE_PATH_FLOAT}${SUFFIX_VEC_AVX}${SUFFIX_HIPACC_KERNEL}"
                         "${HIPACC_KERNELS_BASE_PATH_FLOAT}${SUFFIX_VEC_SCALAR}${SUFFIX_HIPACC_KERNEL}"
                         "${HIPACC_KERNELS_BASE_PATH_FLOAT}${SUFFIX_VEC_SSE2}${SUFFIX_HIPACC_KERNEL}"
                         "${HIPACC_KERNELS_BASE_PATH_FLOAT}${SUFFIX_VEC_SSE3}${SUFFIX_HIPACC_KERNEL}"
                         "${HIPACC_KERNELS_BASE_PATH_FLOAT}${SUFFIX_VEC_SSSE3}${SUFFIX_HIPACC_KERNEL}"
                         "${HIPACC_KERNELS_BASE_PATH_FLOAT}${SUFFIX_VEC_SSE4_1}${SUFFIX_HIPACC_KERNEL}"
                         "${HIPACC_KERNELS_BASE_PATH_FLOAT}${SUFFIX_VEC_SSE4_2}${SUFFIX_HIPACC_KERNEL}")

SET(HIPACC_KERNELS_UINT8 "${HIPACC_KERNELS_BASE_PATH_UINT8}${SUFFIX_VEC_AVX}${SUFFIX_HIPACC_KERNEL}"
                         "${HIPACC_KERNELS_BASE_PATH_UINT8}${SUFFIX_VEC_SCALAR}${SUFFIX_HIPACC_KERNEL}"
                         "${HIPACC_KERNELS_BASE_PATH_UINT8}${SUFFIX_VEC_SSE2}${SUFFIX_HIPACC_KERNEL}"
                         "${HIPACC_KERNELS_BASE_PATH_UINT8}${SUFFIX_VEC_SSE3}${SUFFIX_HIPACC_KERNEL}"
                         "${HIPACC_KERNELS_BASE_PATH_UINT8}${SUFFIX_VEC_SSSE3}${SUFFIX_HIPACC_KERNEL}"
                         "${HIPACC_KERNELS_BASE_PATH_UINT8}${SUFFIX_VEC_SSE4_1}${SUFFIX_HIPACC_KERNEL}"
                         "${HIPACC_KERNELS_BASE_PATH_UINT8}${SUFFIX_VEC_SSE4_2}${SUFFIX_HIPACC_KERNEL}")

SET(HIPACC_KERNELS "${HIPACC_KERNELS_FLOAT}" "${HIPACC_KERNELS_UINT8}")

SET_SOURCE_FILES_PROPERTIES(${HIPACC_KERNELS} PROPERTIES GENERATED TRUE HEADER_FILE_ONLY TRUE) 




SET(HIPACC_OUTPUTS_BASE_PATH       "${PROJECT_SOURCE_DIR}/${NAME_HIPACC_OUTPUTS}/")
SET(HIPACC_OUTPUTS_BASE_PATH_FLOAT "${HIPACC_OUTPUTS_BASE_PATH}/${HIPACC_NAME_FLOAT}")
SET(HIPACC_OUTPUTS_BASE_PATH_UINT8 "${HIPACC_OUTPUTS_BASE_PATH}/${HIPACC_NAME_UINT8}")

SET(HIPACC_OUTPUTS_FLOAT "${HIPACC_OUTPUTS_BASE_PATH_FLOAT}${SUFFIX_VEC_AVX}${SUFFIX_HIPACC_OUTPUT}"
                         "${HIPACC_OUTPUTS_BASE_PATH_FLOAT}${SUFFIX_VEC_SCALAR}${SUFFIX_HIPACC_OUTPUT}"
                         "${HIPACC_OUTPUTS_BASE_PATH_FLOAT}${SUFFIX_VEC_SSE2}${SUFFIX_HIPACC_OUTPUT}"
                         "${HIPACC_OUTPUTS_BASE_PATH_FLOAT}${SUFFIX_VEC_SSE3}${SUFFIX_HIPACC_OUTPUT}"
                         "${HIPACC_OUTPUTS_BASE_PATH_FLOAT}${SUFFIX_VEC_SSSE3}${SUFFIX_HIPACC_OUTPUT}"
                         "${HIPACC_OUTPUTS_BASE_PATH_FLOAT}${SUFFIX_VEC_SSE4_1}${SUFFIX_HIPACC_OUTPUT}"
                         "${HIPACC_OUTPUTS_BASE_PATH_FLOAT}${SUFFIX_VEC_SSE4_2}${SUFFIX_HIPACC_OUTPUT}")

SET(HIPACC_OUTPUTS_UINT8 "${HIPACC_OUTPUTS_BASE_PATH_UINT8}${SUFFIX_VEC_AVX}${SUFFIX_HIPACC_OUTPUT}"
                         "${HIPACC_OUTPUTS_BASE_PATH_UINT8}${SUFFIX_VEC_SCALAR}${SUFFIX_HIPACC_OUTPUT}"
                         "${HIPACC_OUTPUTS_BASE_PATH_UINT8}${SUFFIX_VEC_SSE2}${SUFFIX_HIPACC_OUTPUT}"
                         "${HIPACC_OUTPUTS_BASE_PATH_UINT8}${SUFFIX_VEC_SSE3}${SUFFIX_HIPACC_OUTPUT}"
                         "${HIPACC_OUTPUTS_BASE_PATH_UINT8}${SUFFIX_VEC_SSSE3}${SUFFIX_HIPACC_OUTPUT}"
                         "${HIPACC_OUTPUTS_BASE_PATH_UINT8}${SUFFIX_VEC_SSE4_1}${SUFFIX_HIPACC_OUTPUT}"
                         "${HIPACC_OUTPUTS_BASE_PATH_UINT8}${SUFFIX_VEC_SSE4_2}${SUFFIX_HIPACC_OUTPUT}")

SET(HIPACC_OUTPUTS "${HIPACC_OUTPUTS_FLOAT}" "${HIPACC_OUTPUTS_UINT8}")

SET_SOURCE_FILES_PROPERTIES(${HIPACC_OUTPUTS} PROPERTIES GENERATED TRUE HEADER_FILE_ONLY TRUE) 



SET(HIPACC_FILES "${HIPACC_KERNELS}" "${HIPACC_OUTPUTS}")


# Add source files
SET(PROJECT_SOURCES_FLOAT "${SOURCES_FLOAT_BASE_PATH}.cpp"
                          "${SOURCES_FLOAT_BASE_PATH}${SUFFIX_HANDLERS}.h"
                          "${SOURCES_FLOAT_BASE_PATH}${SUFFIX_HANDLERS}${SUFFIX_VEC_AVX}.cpp"
                          "${SOURCES_FLOAT_BASE_PATH}${SUFFIX_HANDLERS}${SUFFIX_VEC_SCALAR}.cpp"
                          "${SOURCES_FLOAT_BASE_PATH}${SUFFIX_HANDLERS}${SUFFIX_VEC_SSE}.cpp")

SET(PROJECT_SOURCES_UINT8 "${SOURCES_UINT8_BASE_PATH}.cpp"
                          "${SOURCES_UINT8_BASE_PATH}${SUFFIX_HANDLERS}.h"
                          "${SOURCES_UINT8_BASE_PATH}${SUFFIX_HANDLERS}${SUFFIX_VEC_AVX}.cpp"
                          "${SOURCES_UINT8_BASE_PATH}${SUFFIX_HANDLERS}${SUFFIX_VEC_SCALAR}.cpp"
                          "${SOURCES_UINT8_BASE_PATH}${SUFFIX_HANDLERS}${SUFFIX_VEC_SSE}.cpp")

SET(PROJECT_SOURCES_COMMON "${PROJECT_SOURCE_DIR}/${PROJECT_NAME}.cpp")

SET(PROJECT_SOURCES        "${PROJECT_SOURCES_FLOAT}" "${PROJECT_SOURCES_UINT8}" "${PROJECT_SOURCES_COMMON}")


# Add header files
SET(PROJECT_HEADERS_PUBLIC  "${PROJECT_HEADER_DIR}/${PROJECT_NAME}.h")
SET(PROJECT_HEADERS_PRIVATE "${PROJECT_SOURCE_DIR}/${PROJECT_NAME}${SUFFIX_DEFINES}.h"
                            "${PROJECT_SOURCE_DIR}/${PROJECT_NAME}${SUFFIX_HANDLER}${SUFFIX_DEFINES}.h")

SET(PROJECT_HEADERS         "${PROJECT_HEADERS_PUBLIC}" "${PROJECT_HEADERS_PRIVATE}")


ADD_LIBRARY(${PROJECT_NAME} ${PROJECT_SOURCES} ${PROJECT_HEADERS} ${HIPACC_FILES})


# Pack source files into source groups
SOURCE_GROUP(${SOURCE_GROUP_HEADER_FILES}        FILES ${PROJECT_HEADERS_PRIVATE})
SOURCE_GROUP(${SOURCE_GROUP_PUBLIC_HEADER_FILES} FILES ${PROJECT_HEADERS_PUBLIC})

SOURCE_GROUP("${SOURCE_GROUP_HIPACC_KERNELS}\\${HIPACC_NAME_FLOAT}" FILES ${HIPACC_KERNELS_FLOAT})
SOURCE_GROUP("${SOURCE_GROUP_HIPACC_KERNELS}\\${HIPACC_NAME_UINT8}" FILES ${HIPACC_KERNELS_UINT8})
SOURCE_GROUP("${SOURCE_GROUP_HIPACC_OUTPUTS}\\${HIPACC_NAME_FLOAT}" FILES ${HIPACC_OUTPUTS_FLOAT})
SOURCE_GROUP("${SOURCE_GROUP_HIPACC_OUTPUTS}\\${HIPACC_NAME_UINT8}" FILES ${HIPACC_OUTPUTS_UINT8})

SOURCE_GROUP("${SOURCE_GROUP_SOURCE_FILES}\\${SOURCES_FLOAT}" FILES ${PROJECT_SOURCES_FLOAT})
SOURCE_GROUP("${SOURCE_GROUP_SOURCE_FILES}\\${SOURCES_UINT8}" FILES ${PROJECT_SOURCES_UINT8})
SOURCE_GROUP(${SOURCE_GROUP_SOURCE_FILES}                     FILES ${PROJECT_SOURCES_COMMON})
