SET(PROJECT_NAME "Mandelbrot")
SET(HIPACC_NAME  "Mandelbrot")
SET(ISPC_NAME    "Mandelbrot")

SET(PROJECT_HEADER_DIR "../../include/${PROJECT_NAME}/")
SET(PROJECT_SOURCE_DIR "../../src/${PROJECT_NAME}/")

SET(HIPACC_NAME_UINT8  "${HIPACC_NAME}${SUFFIX_TYPE_UINT8}")

SET(SOURCES_UINT8           "${PROJECT_NAME}${SUFFIX_TYPE_UINT8}")
SET(SOURCES_UINT8_BASE_PATH "${PROJECT_SOURCE_DIR}/${SOURCES_UINT8}/${SOURCES_UINT8}")


# Add HIPAcc files
ADD_HIPACC_SOURCE(${SUFFIX_TYPE_UINT8} ${SUFFIX_VEC_AVX})
ADD_HIPACC_SOURCE(${SUFFIX_TYPE_UINT8} ${SUFFIX_VEC_SCALAR})
ADD_HIPACC_SOURCE(${SUFFIX_TYPE_UINT8} ${SUFFIX_VEC_SSE4_2})

MERGE_ALL_HIPACC_FILES()

# Add ISPC files
ADD_ISPC_SOURCE(${SUFFIX_TYPE_UINT8} ${SUFFIX_VEC_AVX}    32 8)
ADD_ISPC_SOURCE(${SUFFIX_TYPE_UINT8} ${SUFFIX_VEC_SSE4_2} 32 4)

MERGE_ALL_ISPC_FILES()


# Add source files
SET(PROJECT_SOURCES_UINT8 "${SOURCES_UINT8_BASE_PATH}.cpp"
                          "${SOURCES_UINT8_BASE_PATH}${SUFFIX_HANDLERS}.h"
                          "${SOURCES_UINT8_BASE_PATH}${SUFFIX_HANDLERS}${SUFFIX_VEC_AVX}.cpp"
                          "${SOURCES_UINT8_BASE_PATH}${SUFFIX_HANDLERS}${SUFFIX_VEC_SCALAR}.cpp"
                          "${SOURCES_UINT8_BASE_PATH}${SUFFIX_HANDLERS}${SUFFIX_VEC_SSE}.cpp")

SET(PROJECT_SOURCES_COMMON "${PROJECT_SOURCE_DIR}/${PROJECT_NAME}.cpp")

SET(PROJECT_SOURCES        "${PROJECT_SOURCES_UINT8}" "${PROJECT_SOURCES_COMMON}")

SET_SOURCE_FILES_PROPERTIES("${SOURCES_UINT8_BASE_PATH}${SUFFIX_HANDLERS}${SUFFIX_VEC_AVX}.cpp" PROPERTIES COMPILE_FLAGS ${CPP_COMP_FLAG_AVX})

# Add header files
SET(PROJECT_HEADERS_PUBLIC  "${PROJECT_HEADER_DIR}/${PROJECT_NAME}.h")
SET(PROJECT_HEADERS_PRIVATE "${PROJECT_SOURCE_DIR}/${PROJECT_NAME}${SUFFIX_DEFINES}.h"
                            "${PROJECT_SOURCE_DIR}/${PROJECT_NAME}${SUFFIX_HANDLER}${SUFFIX_DEFINES}.h")

SET(PROJECT_HEADERS         "${PROJECT_HEADERS_PUBLIC}" "${PROJECT_HEADERS_PRIVATE}")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
ADD_LIBRARY(${PROJECT_NAME} ${PROJECT_SOURCES} ${PROJECT_HEADERS} ${HIPACC_FILES} ${ISPC_FILES})


# Pack source files into source groups
SOURCE_GROUP(${SOURCE_GROUP_HEADER_FILES}        FILES ${PROJECT_HEADERS_PRIVATE})
SOURCE_GROUP(${SOURCE_GROUP_PUBLIC_HEADER_FILES} FILES ${PROJECT_HEADERS_PUBLIC})
SOURCE_GROUP("${SOURCE_GROUP_SOURCE_FILES}\\${SOURCES_UINT8}" FILES ${PROJECT_SOURCES_UINT8})
SOURCE_GROUP(${SOURCE_GROUP_SOURCE_FILES}                     FILES ${PROJECT_SOURCES_COMMON})
